<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match">

    <Button
        android:id="@+id/key1"
        android:text="@string/key1"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key2"
        android:text="@string/key2"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key3"
        android:text="@string/key3"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key4"
        android:text="@string/key4"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key5"
        android:text="@string/key5"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key6"
        android:text="@string/key6"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key7"
        android:text="@string/key7"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key8"
        android:text="@string/key8"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key9"
        android:text="@string/key9"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/key0"
        android:text="@string/key0"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/clear"
        android:text="@string/clear"
        style="@style/CalculatorNumberButton"/>

    <Button
        android:id="@+id/equal"
        android:text="@string/equal"
        style="@style/CalculatorNumberButton"/>
</RelativeLayout>

